# lens-filesystem

./: .gitignore  .travis.yml  ChangeLog.md  README.md  lens-filesystem.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Indexed.hs  Lib.hs  Standard.hs
src/Control/Lens/: FileSystem.hs
src/Control/Lens/FileSystem/: Combinators.hs  Lifted.hs
src/Control/Lens/FileSystem/Internal/: Combinators.hs
test/: MacSpec.hs  Spec.hs
