cabal-version:       2.2

name:                lens-filesystem
version:             0.1.0.1
synopsis:            Lens interface for your filesystem; still a bit experimental
description:         Please see the README on GitHub at <https://github.com/ChrisPenner/lens-fs#readme>
homepage:            https://github.com/ChrisPenner/lens-filesystem
bug-reports:         https://github.com/ChrisPenner/lens-filesystem/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2019 Chris Penner
category:            Control
build-type:          Simple
extra-source-files:
  ChangeLog.md, README.md
  -- mostly output of
  -- $ find test/ -type f
  test/data/permissions/readonly
  test/data/permissions/exe
  test/data/nested/peak/trees.txt
  test/data/nested/peak/base/basecamp.txt
  test/data/nested/top/mid/bottom/floor.txt
  test/data/flat/file.txt
  test/data/flat/dir/another-file.txt
  test/data/flat/file.md
  test/data/.dotfile

source-repository head
  type: git
  location: https://github.com/ChrisPenner/lens-filesystem

common commons
  build-depends:       base          >= 4.7    && < 5
                     , directory
                     , filepath
                     , lens
                     , lens-action

  ghc-options:         -Wall

library
  import:              commons

  exposed-modules:     Control.Lens.FileSystem
                     , Control.Lens.FileSystem.Internal.Combinators

  other-extensions:    RankNTypes
                     , KindSignatures
                     , TupleSections
                     , TypeFamilies
                     , ScopedTypeVariables
                     , LambdaCase
                     , FlexibleContexts

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite lens-filesystem-test
  import:              commons

  main-is:             Spec.hs
  type:                exitcode-stdio-1.0

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       hspec
                     , lens-filesystem

  hs-source-dirs:      test
  default-language:    Haskell2010
